[gd_scene load_steps=5 format=3 uid="uid://cj86pmmi56ojm"]

[ext_resource type="Script" uid="uid://bqp0vikcot0f5" path="res://Viviana/scrips/npc_5.gd" id="1_hfxl1"]
[ext_resource type="Texture2D" uid="uid://ccm12lckystmu" path="res://Viviana/Npc/pnc5.png" id="1_tshyd"]
[ext_resource type="Texture2D" uid="uid://dhky5pjkfjs4n" path="res://Viviana/Npc/dialog_interactable question.png" id="2_hfxl1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ugad"]
size = Vector2(38, 27.5)

[node name="npc5" type="Area2D"]
script = ExtResource("1_hfxl1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_tshyd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.75)
shape = SubResource("RectangleShape2D_4ugad")

[node name="questionmark2" type="Sprite2D" parent="."]
position = Vector2(0, -19)
texture = ExtResource("2_hfxl1")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
